# gmx-solana

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  markets_info_parser.rs
crates/cli/src/commands/: markets_info.rs  mod.rs
crates/cli/src/commands/exchange/: mod.rs  simulate.rs
crates/cli/tests/: markets_info.rs
crates/markets-info-cli/: Cargo.toml  README.md
crates/markets-info-cli/src/: lib.rs  main.rs
crates/markets-info-cli/tests/: cli_args.rs  live_rpc.rs
crates/sdk/src/builders/: utils.rs
