[workspace]
resolver = "2"
members = ["crates/*", "programs/*", "examples", "tests"]
exclude = ["crates/markets-info-cli"]

[workspace.package]
version = "0.10.0"
edition = "2021"
license-file = "LICENSE"
description = "GMX-Solana is an extension of GMX on the Solana blockchain."
repository = "https://github.com/gmsol-labs/gmx-solana"
readme = "README.md"
keywords = ["gmx-solana", "gmx", "solana"]

[workspace.dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", default-features = false }
anchor-syn = "0.31.1"
anyhow = "1.0.98"
async-stream = "0.3.5"
async-tungstenite = { version = "0.29.1", default-features = false }
base64 = "0.22.1"
backon = "1.5.2"
bincode = "1.3.3"
bitmaps = "3.2.1"
borsh = "0.10.4"
bs58 = "0.5.1"
bytemuck = "1.19.0"
byteorder = "1.5.0"
bytes = "1.8.0"
cfg_aliases = "0.2.1"
cfg-if = "1.0.0"
chainlink_solana = "1.0.0"
clap = "4.5.20"
derive_more = "2.0.1"
dialoguer = "0.11.0"
dyn-clone = "1.0.18"
either = "1.13.0"
event-listener = "5.4.0"
eventsource-stream = "0.2.3"
eyre = "0.6.12"
figment = "0.10.19"
futures-util = "0.3.30"
heck = "0.5.0"
hex = "0.4.3"
hmac = "0.12.1"
indexmap = "2.9.0"
js-sys = "0.3.77"
num-bigint = "0.4.6"
num-traits = "0.2.18"
num_enum = "0.7.3"
paste = "1.0.15"
petgraph = { version = "0.8.1", default-features = false }
pin-project-lite = "0.2.15"
poem = "3.1.3"
prettytable = "0.10.0"
pyth-sdk = "0.8.0"
pyth-sdk-solana = "0.10.1"
pyth-solana-receiver-sdk = "1.0.1"
pythnet-sdk = "2.3.1"
rand = "0.7.3"
reqwest = "0.12.15"
reqwest-websocket = "0.4.3"
ruint = { version = "1.15.0", default-features = false }
rust-embed = "8.7.2"
rust_decimal = { version = "1.34", default-features = false }
rust_decimal_macros = { version = "1.34" }
serde = "1.0.214"
serde_bytes = "0.11.15"
serde_json = "1.0.132"
serde-wasm-bindgen = "0.6.5"
serde_with = "3.11.0"
sha2 = "0.10.9"
shellexpand = "3.1.0"
smallvec = "1.15.0"
snap = "1.1.1"
solana-account-decoder = "2.1.0"
solana-client = "2.1.0"
solana-remote-wallet = "2.1.0"
solana-sdk = ">=2.1.0,<2.2.0"
solana-transaction-status = "2.1.0"
solana-transaction-status-client-types = "2.1.0"
solana-rpc-client-api = "2.1.21"
solana-account-decoder-client-types = "2.1.0"
spl-associated-token-account = "6.0.0"
# spl-governance = "4.0.0"
spl-memo = "6.0.0"
spl-token = "7.0.0"
# squads-multisig = "2.0.1"
static_assertions = "1.1.0"
strum = "0.27.1"
switchboard-on-demand = { version = "0.3.8", default-features = false }
switchboard-on-demand-client = { version = "0.2.15" }
thiserror = "1.0.69"
tokio = { version = "1.41.0", default-features = false }
tokio-stream = "0.1.15"
toml = "0.8.22"
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
tsify-next = "0.5.5"
typed-builder = "0.21.0"
url = "2.5.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
humantime = "2.1.0"
num-format = "0.4.4"
time = "0.3.36"
color-eyre = "0.6.5"
etcetera = "0.10.0"
enum_dispatch = "0.3.13"
vergen-git2 = "1.0.0"
mpl-token-metadata = "5"
solana-security-txt = "1.1.1"
jito-sdk-rust = "0.3.2"
uuid = "1.10.0"
libsecp256k1 = "0.7.1"
gql_client = "1.1.0"

[workspace.dependencies.chainlink-data-streams-report]
version = "1.0.3"

[workspace.dependencies.gmsol-model]
version = "0.9.0"
path = "crates/model"

[workspace.dependencies.gmsol-utils]
version = "0.9.0"
path = "crates/utils"

[workspace.dependencies.gmsol-store]
version = "0.9.0"
path = "programs/store"

[workspace.dependencies.gmsol-treasury]
version = "0.9.0"
path = "programs/treasury"

[workspace.dependencies.gmsol-timelock]
version = "0.9.0"
path = "programs/timelock"

[workspace.dependencies.gmsol-mock-chainlink-verifier]
version = "0.9.0"
path = "programs/mock-chainlink-verifier"

[workspace.dependencies.gmsol-callback]
version = "0.9.0"
path = "programs/callback"

[workspace.dependencies.gmsol-competition]
version = "0.9.0"
path = "programs/competition"

[workspace.dependencies.gmsol-liquidity-provider]
version = "0.9.0"
path = "programs/liquidity-provider"

[workspace.dependencies.gmsol-decode]
version = "0.10.0"
path = "crates/decode"

[workspace.dependencies.gmsol-chainlink-datastreams]
version = "0.9.0"
path = "crates/chainlink-datastreams"

[workspace.dependencies.gmsol-solana-utils]
version = "0.10.0"
path = "crates/solana-utils"

[workspace.dependencies.gmsol-programs]
version = "0.10.0"
path = "crates/programs"

[workspace.dependencies.gmsol-sdk]
version = "0.10.0"
path = "crates/sdk"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
