[package]
name = "gmsol-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/gmsol-cli"

[[bin]]
name = "gmsol"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["bin", "remote-wallet"]
remote-wallet = ["solana-remote-wallet"]
bin = ["color-eyre", "tracing-subscriber"]
devnet = ["gmsol-sdk/devnet"]
squads = ["gmsol-sdk/squads"]
chainlink = ["gmsol-sdk/chainlink"]
pyth = ["gmsol-sdk/pyth"]
switchboard = ["gmsol-sdk/switchboard"]
execute = ["chainlink", "pyth", "switchboard"]
chaoslabs-risk-oracle = ["gmsol-sdk/chaoslabs-risk-oracle"]

# nightly features
nightly = ["nightly-cli-update-fees-state", "nightly-cli-market-graph"]
nightly-cli-update-fees-state = []
nightly-cli-market-graph = ["gql_client"]

[dependencies]
gmsol-sdk = { workspace = true, features = [
    "client",
    "serde",
    "clap",
    "competition",
    "decode",
    "treasury",
    "timelock",
    "liquidity-provider",
] }
gmsol-model = { workspace = true }
gmsol-store = { path = "../../programs/store" }
bytemuck = { workspace = true }

eyre = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
figment = { workspace = true, features = ["env", 'toml'] }
tracing = { workspace = true }
cfg-if = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["indexmap_2"] }
serde_json = { workspace = true, features = ["preserve_order"] }
url = { workspace = true }
shellexpand = { workspace = true }
etcetera = { workspace = true }
enum_dispatch = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
rust_decimal = { workspace = true, features = ["std"] }
dialoguer = { workspace = true }
anchor-spl = { workspace = true, features = ["token", "associated_token"] }
time = { workspace = true, features = ["parsing", "formatting"] }
humantime = { workspace = true }
either = { workspace = true, features = ["serde"] }
prettytable = { workspace = true }
indexmap = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
futures-util = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
strum = { workspace = true }

color-eyre = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }
solana-remote-wallet = { workspace = true, optional = true }
gql_client = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[build-dependencies]
vergen-git2 = { workspace = true, features = ["build", "cargo", "rustc"] }
anyhow = { workspace = true }
