[package]
name = "gmsol-markets-info-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bytemuck = { workspace = true }

anchor-lang = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }

gmsol-model = { workspace = true }
gmsol-store = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
